# Reactive-Cpp-Markup

./: CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  setup.bat  setup.sh
AndroidProject/: settings.gradle.kts
AndroidProject/app/: build.gradle.kts
AndroidProject/app/src/main/: AndroidManifest.xml
AndroidProject/app/src/main/cpp/: CMakeLists.txt
AndroidProject/app/src/main/java/com/example/reactivecppmarkup/: ExtendedNative.java
AndroidProject/app/src/main/res/values/: strings.xml  themes.xml
AndroidProject/app/src/main/res/values-night/: themes.xml
AndroidProject/gradle/: libs.versions.toml
AndroidProject/gradle/wrapper/: gradle-wrapper.properties
backend/: DOM.cpp  DOM.h  arena.cpp  arena.h  arena_string.cpp  arena_string.h  backend.h  buddy.h  buddy_vk.h  codegen.cpp  compiler.cpp  compiler.h  dom_attatchment.h  file_system.cpp  file_system.h  freetype_module.cpp  graphics_types.cpp  graphics_types.h  harfbuzz_module.cpp  key_codes.h  lexer.cpp  overloads.cpp  parser.cpp  platform.h  platform_android.cpp  platform_font.cpp  platform_linux.cpp  platform_vulkan.cpp  platform_windows.cpp  prepass.cpp  runtime.cpp  shaping_platform.cpp  simd.h  string_view.h  todo.txt
backend/shaders/: combined_shader.comp  frag.spv  opaque_frag.spv  opaque_shader.frag  opaque_shader.vert  opaque_vert.spv  shader.frag  shader.vert  text_frag.spv  text_shader.frag  text_shader.vert  text_vert.spv  transparent_frag.spv  transparent_shader.frag  transparent_shader.vert  transparent_vert.spv  vert.spv
docs/: 101_markup_basics.txt
new_backend/: arena.cpp  arena.h  arena_queue.cpp  arena_queue.h  arena_string.cpp  arena_string.h  arena_xar.cpp  arena_xar.h  atlas_allocator.cpp  build.bat  key_codes.h  lgui.cpp  lgui.h  prim_types.h  test_program.cpp  win32_lgui.cpp
test_build/: build_app.sh
test_build/compiled_shaders/: frag.spv  vert.spv
test_src/: InputBox.cmc  MainPage.cmp  TestPage.cmp  new_syntax.txt  test_component.cmc
